# bazel-annotate-buildkite-plugin

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-to-buildkite.sh  plugin.yml
.buildkite/: pipeline.yml
hooks/: post-command
lib/: bazel-bep.bash  failure-extractor.bash  plugin.bash
tests/: post-command.bats  test_analyzer.py  test_analyzer_functionality.sh  test_plugin_config.sh
utils/: generate_large_bep_files.py
