"""Bazel module for bazel-annotate-buildkite-plugin."""

module(
    name = "bazel_annotate_buildkite_plugin",
    version = "1.1.1",
)

bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.8.3")

# Register protobuf toolchain
register_toolchains("@protobuf//toolchain:all")
